frontend/css/main.css
/* ... */
@media (max-width: 1050px) {
	div.details-abreast {
		flex-wrap: wrap;
	}
	div.details-abreast > div {
		width: 100%;
		overflow: visible;
		padding: 0px;
		margin: 0px;
	}
	.controls {
		flex-wrap: wrap;
	}
	.controls > * {
		margin-top: 4px;
		margin-bottom: 4px;
	}
}
@media (max-width: 750px) {
	#header {
		justify-content: center;
		flex-direction: column;
		height: 115px;
	}
	#header .separator.space {
		display: none;
	}
	#header > .search {
		width: 278px;
		margin-right: 0px;
	}
	#explorer,
	#login {
		display: block;
		height: auto;
		overflow: auto;
	}
	#explorer #explorer-tree,
	#login #login-form {
		width: 100%;
		height: 100%;
		max-width: none;
		min-width: auto;
		border: none;
	}
	#explorer:not(.nosidebar) #explorer-content {
		display: none;
	}
	#login #login-bg {
		display: none;
	}
}

@media (prefers-color-scheme: dark) {
	html, #explorer-content {
		background-color: #0d1117;
	}
	#explorer-tree, #login-form, #dialog-container #dialog-box, #header #search-results {
		background-color: #161b22;
		border-color: rgba(255,255,255,0.1);
	}
	#dialog-container.active {
		background-color: rgba(0,0,0,0.45);
	}
	#message-container .message {
		background-color: black;
	}
	#message-container .message .message-title {
		color: white;
	}
	#explorer-tree a:focus,
	#explorer-tree a:hover,
	#explorer-tree a:active,
	#header #search-results a:focus,
	#header #search-results a:hover,
	#header #search-results a:active,
	.blockListItem:focus,
	.blockListItem:hover,
	.blockListItem:active {
		background-color: #30363d;
	}
	#header input:focus {
		color: white;
		background-color: #141414;
	}
	#header input:focus::placeholder {
		color: gray;
	}
	#header #search-glass.focus {
		background-color: white;
	}
	body, a, #header #search-results,
	#explorer-content .details-abreast h1,
	#explorer-content .details-abreast h2,
	#explorer-content .details-abreast h3,
	#explorer-content .gallery h1,
	#explorer-content .gallery h2,
	#explorer-content .gallery h3 {
		color: #E9ECEF;
	}
	code.block {
		border: 1px solid rgba(255,255,255,0.1);
	}
	table.list, code, .box {
		background-color: #161b22;
	}
	table.list tr th, table.list tr td {
		border-bottom: 1px solid rgba(255,255,255,0.1);
	}
	table.list tr:first-child th,
	table.list tr:first-child td {
		border-top: 1px solid rgba(255,255,255,0.1);
	}
	table.list tr th:first-child,
	table.list tr td:first-child {
		border-left: 1px solid rgba(255,255,255,0.1);
	}
	table.list tr th:last-child,
	table.list tr td:last-child {
		border-right: 1px solid rgba(255,255,255,0.1);
	}
	.box {
		border: 2px solid rgba(255,255,255,0.1);
	}
	input:not([type=range]):not([type=radio]):not([type=checkbox]), select, textarea {
		color: white;
		background-color: transparent;
		border: none;
		border-bottom: 1px solid rgba(255,255,255,0.4);
		border-radius: 0px;
		box-shadow: none;
	}
	input:disabled, select:disabled, textarea:disabled, .disabled,
	input:not([type=file]):read-only, textarea:read-only {
		background-color: rgb(240, 240, 240, 0.1);
		background-image: repeating-linear-gradient(45deg, transparent, transparent 10px, rgb(240, 240, 240, 0.1) 10px, rgb(240, 240, 240, 0.1) 20px);
	}
	input:not([type=range]):not([type=radio]):not([type=checkbox]):focus, input:not([type=range]):not([type=radio]):not([type=checkbox]):hover,
	textarea:focus, textarea:hover,
	select:focus, select:hover {
		border-bottom: 1px solid rgba(255,255,255,0.5);
		box-shadow: none;
	}
	input:not([type=range]):not([type=radio]):not([type=checkbox]):active,
	textarea:active,
	select:active {
		border-bottom: 1px solid rgba(255,255,255,0.6);
		box-shadow: none;
	}
	button {
		color: white;
		background-color: #21262d;
		border-color: rgba(255,255,255,0.1);
	}
	button.primary {
		background-color: #006193;
	}
	button.primary:hover,
	button.primary:focus {
		background-color: #004a70;
	}
	button:hover,
	button:focus {
		background-color: #30363d;
	}
	button:disabled {
		color: #484f58 !important;
		background-color: #21262d !important;
	}
	.progressbar {
		background-color: #324650;
	}
	.progressbar > .progress {
		background-color: #49AFD9;
	}
	.alert.info {
		background: #0f6082;
		color: #e9ecef;
		border: 1px solid transparent
	}
	.alert.success {
		background: #62a420;
		color: #fff;
		border: none
	}
	.alert.warning {
		background: #7f6509;
		color: #e9ecef;
		border: 1px solid transparent
	}
	.alert.error {
		background: #882d31;
		color: #e9ecef;
		border: 1px solid transparent
	}
	.vl {
		background-color: rgba(255,255,255,0.2);
	}
}

@media print {
	#explorer > #explorer-tree, .controls {
		display: none;
	}
	#explorer {
		height: auto;
	}
	#explorer > #explorer-content {
		flex-basis: 100%;
		overflow: auto;
	}
	table.list .sortsymbol::after {
		content: '' !important;
	}
	.noprint {
		display: none !important;
	}
}

